requisição-listar-check

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<router-outlet>
-    <!-- tudo que for roteador fica aqui. As configurações ficam la no app-routing.module.ts  -->
-</router-outlet>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
+
+
