--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,6 +1,3 @@
-<div class="card" [ngClass]="variant" >
-     <!--Com ngClass ele vai receber as classes variants la do ts: primary or secondary  -->
-    <ng-content>
-
-    </ng-content>
+<div class="card" [ngClass]="variant">
+  <ng-content></ng-content>
 </div>
