--- a/src/app/shared/banner/banner.component.html
+++ b/src/app/shared/banner/banner.component.html
@@ -1,5 +1,6 @@
-
-<figure class="banner">
-    <img src = "{{ src }}" alt= "{{ alt }}">
+<figure>
+  <img
+    src="{{ src }}"
+    alt="{{ alt }}">
 </figure>
-<!-- figure e uma div que comporta uma imagem -->
+
