--- a/src/app/shared/card-depoimento/card-depoimento.component.html
+++ b/src/app/shared/card-depoimento/card-depoimento.component.html
@@ -1,11 +1,12 @@
 <mat-card class="depoimento">
-    <mat-card-header>
-      <mat-card-title-group>
-        <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >        
-      </mat-card-title-group>
-    </mat-card-header>
-    <mat-card-content>
-      <p>{{depoimento}}</p>
-      <mat-card-title>{{autoria}}</mat-card-title>
-    </mat-card-content>
+  <mat-card-content>
+    <img src="assets/imagens/avatar3.png" alt="Avatar da pessoa autora do depoimento">
+    <ul>
+      <li>{{ depoimento }}</li>
+      <li>
+        <strong>{{ autoria }}</strong>
+      </li>
+    </ul>
+  </mat-card-content>
 </mat-card>
+
