--- a/src/app/shared/card-depoimento/card-depoimento.component.scss
+++ b/src/app/shared/card-depoimento/card-depoimento.component.scss
@@ -1,24 +1,25 @@
-.depoimento{
-    max-width: 19.833rem;
-    background-color: #FEF7FF;
+.depoimento {
+  max-width: 320px;
+  background-color: #FEF7FF;
+  border: none;
+  img {
+    max-width: 56px;
+    max-height: 56px;
+    margin-top: 16px;
+  }
+  ul {
+    padding: 0;
+    list-style: none;
+    li {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
+  mat-card-content {
     display: flex;
-    flex-direction: row;
-    mat-card-content{
-        display: flex;
-        flex-direction: column;
-
-    }
-    .mat-mdc-card-sm-image {
-        width: 3.5rem;
-        height: 3.5rem;
-    }
-    mat-card-header {
-        display: flex;
-        padding: 0;
-    }
-    mat-card-title{
-        font-size: 1rem;
-    }
-
+    align-items: start;
+    gap: 16px;
+  }
 }
-
