--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,17 +1,32 @@
 <footer class="app-footer">
-    <mat-toolbar>
-        <div class="footer-about">
-            <img src="assets/imagens/logo-com-tagline.png" alt="">
-            <p>Horário de atendimento: 08h - 20h (Segunda a Sábado)</p>
-            <p>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</p>
-        </div>
-        <div class="footer-social">
-            <p>Acesse nossas redes sociais:</p>
-            <div class="social-icons">
-                <button><img src="assets/icones/whatsapp.png" alt=""></button>
-                <button><img src="assets/icones/instagram.png" alt=""></button>
-                <button><img src="assets/icones/twitter.png" alt=""></button>
-            </div>
-        </div>
-    </mat-toolbar>
+  <app-container>
+    <div class="inner">
+      <ul>
+        <li>
+          <img src="assets/imagens/logo-com-tagline.png" alt="">
+        </li>
+        <li>
+          Horário de atendimento: 08h - 20h (Segunda a Sábado)
+        </li>
+        <li>
+          Desenvolvido por Alura. Projeto fictício sem fins comerciais
+        </li>
+      </ul>
+      <ul class="socials">
+        <li>Acesse nossas redes:</li>
+        <li>
+          <button mat-icon-button>
+            <img src="assets/icones/whatsapp.png" alt="Ícone do whatsapp">
+          </button>
+          <button mat-icon-button>
+            <img src="assets/icones/instagram.png" alt="Ícone do instagram">
+          </button>
+          <button mat-icon-button>
+            <img src="assets/icones/twitter.png" alt="Ícone do twitter">
+          </button>
+        </li>
+      </ul>
+    </div>
+  </app-container>
 </footer>
+
