--- a/src/app/pages/home/promocoes/promocoes.component.html
+++ b/src/app/pages/home/promocoes/promocoes.component.html
@@ -1,4 +1,4 @@
-<!-- src/app/pages/home/promocoes/promocoes.component.html -->
 <div class="card-wrapper">
     <app-card-busca  *ngFor="let item of promocoes" [promocao]="item" />
 </div>
+<!-- Aqui eu defino as minhas propriedades que vão ser passadas ao meu card-busca da home page -->
