--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-/*  src/styles.scss */
+html, body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 .card-wrapper {
     display: flex;
     flex-wrap: wrap;
