--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,11 @@
     <h2>Promoções</h2>
     <app-promocoes />
     <h2>Depoimentos</h2>
-   <app-depoimentos/>  <!-- Esse é o componente depoimentos diferente do card-depoimentos -->
+    <div class="card-wrapper">
+      <app-card-depoimento></app-card-depoimento>
+      <app-card-depoimento></app-card-depoimento>
+      <app-card-depoimento></app-card-depoimento>
+    </div>
   </app-container>
   <app-banner
     src="assets/imagens/banner-homepage-rodape.png"
