--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -1,29 +1,42 @@
 <app-card variant="secondary" class="form-busca">
-  <form [formGroup]="formBuscaService.formBusca">
+  <form [formGroup]="formBuscaService.formBusca" (ngSubmit)="buscar()">
     <h2>Passagens</h2>
     <div class="flex-container">
       <mat-button-toggle-group aria-label="Tipo de passagem" formControlName="somenteIda">
-        <!-- formControlName é o que faz eu linkar o meu somenteIda: new FormControl(false) aqui -->
         <mat-button-toggle [value]="false">
           <mat-icon *ngIf="!formBuscaService.formBusca.get('somenteIda')?.value">check</mat-icon>
           IDA E VOLTA
         </mat-button-toggle>
-        <mat-button-toggle [value]="true">
+        <mat-button-toggle  [value]="true">
           <mat-icon *ngIf="formBuscaService.formBusca.get('somenteIda')?.value">check</mat-icon>
           SOMENTE IDA
         </mat-button-toggle>
       </mat-button-toggle-group>
-      <mat-chip-listbox (click)="openDialog()" aria-label="Seleção de passagens">
-        <mat-chip-option selected>1 adulto</mat-chip-option>
-        <mat-chip-option>Econômica</mat-chip-option>
-      </mat-chip-listbox>
+      <mat-chip (click)="formBuscaService.openDialog()">
+        <div class="inner">
+          <mat-icon>check</mat-icon> 1 adulto
+        </div>
+      </mat-chip>
+      <mat-chip (click)="formBuscaService.openDialog()">
+        <div class="inner">
+          <mat-icon>check</mat-icon> Econômica
+        </div>
+      </mat-chip>
     </div>
     <div class="flex-container">
-      <app-dropdown-uf label="Origem" iconePrefixo="flight_takeoff"></app-dropdown-uf>
+      <app-dropdown-uf 
+        label="Origem" 
+        iconePrefixo="flight_takeoff"
+        [control]="formBuscaService.obterControle('origem')"
+      />
       <button mat-icon-button>
         <mat-icon>sync_alt</mat-icon>
       </button>
-      <app-dropdown-uf label="Destino" iconePrefixo="flight_land"></app-dropdown-uf>
+      <app-dropdown-uf 
+        label="Destino" 
+        iconePrefixo="flight_land"
+        [control]="formBuscaService.obterControle('destino')"  
+      />
       <mat-form-field class="input-container" appearance="outline">
         <mat-label>Data de ida</mat-label>
         <input matInput [matDatepicker]="ida">
