--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,8 @@
     <button mat-button>Vender milhas</button>
     <button mat-button>Sobre</button>
     <button mat-raised-button color="primary">CADASTRE-SE</button>
-    <button mat-stroked-button>LOGIN</button>
+    <button routerLink="/login" mat-stroked-button>LOGIN</button>
   </mat-toolbar>
+  <!-- routerLink é como se fosse um navigate -->
 </header>
 
