--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -24,20 +24,27 @@
       </mat-chip>
     </div>
     <div class="flex-container">
-      <app-dropdown-uf 
+      <div class="drop-container">
+
+        <app-dropdown-uf 
         label="Origem" 
         iconePrefixo="flight_takeoff"
+        placeholder="Origem"
         [control]="formBuscaService.obterControle('origem')"
-      />
-      <button mat-icon-button (click)="formBuscaService.trocarOrigemDestino()" >
-        <mat-icon>sync_alt</mat-icon>
-      </button>
-      <app-dropdown-uf 
-        label="Destino" 
-        iconePrefixo="flight_land"
-        [control]="formBuscaService.obterControle('destino')"  
-      />
-      <mat-form-field class="input-container" appearance="outline">
+        />
+      </div>
+        <button mat-icon-button (click)="formBuscaService.trocarOrigemDestino()" >
+          <mat-icon>sync_alt</mat-icon>
+        </button>
+        <div class="drop-container">
+          <app-dropdown-uf 
+          label="Destino" 
+          placeholder="Destino"
+          iconePrefixo="flight_land"
+          [control]="formBuscaService.obterControle('destino')"  
+          />
+        </div>
+        <mat-form-field class="input-container" appearance="outline">
         <mat-label>Data de ida</mat-label>
         <input matInput [matDatepicker]="ida">
         <mat-datepicker-toggle matIconSuffix [for]="ida"></mat-datepicker-toggle>
