--- a/src/app/shared/dropdown-uf/dropdown-uf.component.html
+++ b/src/app/shared/dropdown-uf/dropdown-uf.component.html
@@ -1,16 +1,16 @@
 <mat-form-field class="input-container" appearance="outline">
     <mat-label>{{ label }}</mat-label>
-    <mat-icon matPrefix>
+    <mat-icon matPrefix *ngIf="iconePrefixo">
         {{ iconePrefixo }}
     </mat-icon>
     <input
         matInput
-        placeholder="Origem"
+        [placeholder]="placeholder"
         [formControl]="control"
         [name]="label"
         ngDefaultControl
         [matAutocomplete]="auto">
-    <mat-icon matSuffix>
+    <mat-icon matSuffix *ngIf="iconeSufixo">
       {{ iconeSufixo }}
     </mat-icon>
     <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
