--- a/src/app/shared/dropdown-uf/dropdown-uf.component.html
+++ b/src/app/shared/dropdown-uf/dropdown-uf.component.html
@@ -10,11 +10,9 @@
         [name]="label"
         ngDefaultControl
         [matAutocomplete]="auto">
-    <mat-icon matSuffix *ngIf="iconeSufixo">
-      {{ iconeSufixo }}
-    </mat-icon>
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-        <mat-option *ngFor="let estado of filteredOptions$ | async" [value]="estado.nome">
+    <mat-icon matSuffix>search</mat-icon>
+    <mat-autocomplete [displayWith]="displayFn" autoActiveFirstOption #auto="matAutocomplete">
+        <mat-option *ngFor="let estado of filteredOptions$ | async" [value]="estado">
           {{estado.nome}}
         </mat-option>
       </mat-autocomplete>
