--- a/src/app/shared/form-busca/form-busca.component.scss
+++ b/src/app/shared/form-busca/form-busca.component.scss
@@ -8,9 +8,10 @@
         gap: 12px;
         margin: 16px 0;
     }
+
     .drop-container {
-        max-width: 230px
-    }
+      max-width: 230px;
+  }
 
     .input-container {
         margin-bottom: -1.25em;
