event-logout-update-check

--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -3,6 +3,10 @@
     [titulo] = 'titulo'
     [textoBotao] = 'textoBotao'
     [perfilComponent] = 'perfilComponent'
+    (sair) = 'deslogar()'
+    (acaoClique) = 'atualizar()'
+    
 >
+<!-- o (sair) e o (acaoClique) eu to ouvindo do meu componente pai pelo Output  -->
 
 </app-form-base>
