--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,6 +1,6 @@
 <app-banner src="assets/imagens/banner-perfil.png" alt="Banner da tela de perfil"></app-banner>
 <app-form-base
-    [titulo] = 'titulo'
+    [titulo] = 'titulo + nome'
     [textoBotao] = 'textoBotao'
     [perfilComponent] = 'perfilComponent'
     (sair) = 'deslogar()'
