--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,11 +1,22 @@
 <header class="app-header">
   <mat-toolbar>
-    <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada">
+    <a routerLink="/">
+      <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada">
+    </a>
     <span class="spacer"></span>
-    <button mat-button>Vender milhas</button>
-    <button mat-button>Sobre</button>
-    <button routerLink="/cadastro" mat-raised-button color="primary">CADASTRE-SE</button>
-    <button routerLink="/login" mat-stroked-button>LOGIN</button>
+    <div class="links-toobar">
+      <button mat-button>Vender milhas</button>
+      <button mat-button>Sobre</button>
+      <ng-container *ngIf="user$ | async as pessoaUsuaria, else login" >
+        <button routerLink="/perfil" mat-raised-button color="primary">EDITAR PERFIL</button>
+        <button mat-stroked-button (click)="logout()">SAIR</button>
+      </ng-container>
+      <ng-template #login>
+        <button routerLink="/cadastro" mat-raised-button color="primary">CADASTRE-SE</button>
+        <button routerLink="/login" mat-stroked-button>LOGIN</button>
+      </ng-template>
+      
+    </div >
   </mat-toolbar>
   <!-- routerLink é como se fosse um navigate -->
 </header>
