--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,20 +4,20 @@
       <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada">
     </a>
     <span class="spacer"></span>
-    <div class="links-toobar">
+    <div class="links-toolbar">
       <button mat-button>Vender milhas</button>
       <button mat-button>Sobre</button>
-      <ng-container *ngIf="user$ | async as pessoaUsuaria, else login" >
-        <button routerLink="/perfil" mat-raised-button color="primary">EDITAR PERFIL</button>
-        <button mat-stroked-button (click)="logout()">SAIR</button>
+      <ng-container *ngIf="user$ | async as pessoaUsuaria; else login">
+        <a routerLink="/perfil">
+          <img src="assets/icones/user.png" alt="Ícone da pessoa usuária">
+        </a>
+        <button mat-stroked-button color="primary" (click)="logout()">SAIR</button>
       </ng-container>
       <ng-template #login>
         <button routerLink="/cadastro" mat-raised-button color="primary">CADASTRE-SE</button>
         <button routerLink="/login" mat-stroked-button>LOGIN</button>
       </ng-template>
-      
-    </div >
+    </div>
   </mat-toolbar>
-  <!-- routerLink é como se fosse um navigate -->
 </header>
 
