--- a/src/app/shared/form-base/form-base.component.html
+++ b/src/app/shared/form-base/form-base.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <form [formGroup]="cadastroForm">
       <mat-card-title>
-        {{titulo}}
+        {{ titulo }}
       </mat-card-title>
       <section>
         <div class="acoesPerfil" *ngIf="perfilComponent">
@@ -54,11 +54,11 @@
                 <mat-radio-button value="outro">Prefiro não informar</mat-radio-button>
               </mat-radio-group>
             </div>
-            <mat-form-field appearance="outline">
-              <mat-label>Telefone</mat-label>
-              <input matInput formControlName="telefone" placeholder="+XX XXXX-XXXX">
-              <mat-error *ngIf="cadastroForm.get('telefone')?.errors">Telefone é obrigatório</mat-error>
-            </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Telefone</mat-label>
+                <input matInput formControlName="telefone" placeholder="+XX XXXX-XXXX">
+                <mat-error *ngIf="cadastroForm.get('telefone')?.errors">Telefone é obrigatório</mat-error>
+              </mat-form-field>
             <div class="drop-container">
               <app-dropdown-uf
                 label="Estado"
@@ -66,7 +66,7 @@
                 [control]="estadoControl">
               </app-dropdown-uf>
               <mat-error class="custom-error" *ngIf="estadoControl?.errors && estadoControl?.touched">Estado é obrigatório</mat-error>
-            </div>
+          </div>
           </div>
         </div>
       </mat-card-content>
@@ -112,13 +112,12 @@
         </mat-error>
       </mat-card-content>
       <mat-card-actions class="full-width">
-        <button (click)="executarAcao()" mat-flat-button
-          [class.perfil-button] ="perfilComponent"
+        <button mat-flat-button
           [disabled]="cadastroForm.invalid"
+          (click)="executarAcao()"
+          [class.perfil-button]="perfilComponent"
           color="primary"
-          
-        >
-          {{textoBotao}}
+        >{{ textoBotao }}
         </button>
       </mat-card-actions>
     </form>
