--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,16 +8,16 @@
       <button mat-button>Vender milhas</button>
       <button mat-button>Sobre</button>
       <ng-container *ngIf="user$ | async as pessoaUsuaria; else login">
-        <a routerLink="auth/perfil">
+        <a (click)="navegarPara('auth/perfil')">
           <img src="assets/icones/user.png" alt="Ícone da pessoa usuária">
         </a>
         <button mat-stroked-button color="primary" (click)="logout()">SAIR</button>
       </ng-container>
       <ng-template #login>
-        <button routerLink="auth/cadastro" mat-raised-button color="primary">CADASTRE-SE</button>
-        <button routerLink="auth/login" mat-stroked-button>LOGIN</button>
+        <button (click)="navegarPara('auth/cadastro')" mat-raised-button color="primary">CADASTRE-SE</button>
+        <button (click)="navegarPara('auth/login')" mat-stroked-button>LOGIN</button>
+
       </ng-template>
     </div>
   </mat-toolbar>
 </header>
-
