erro-routing check

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="app-header">
   <mat-toolbar>
-    <a routerLink="/">
+    <a (click)="navegarPara('/')">
       <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada">
     </a>
     <span class="spacer"></span>
